Finish bcdi data

--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -223,7 +223,7 @@ The difference in activity between different crystalline facets will be studied 
     \includegraphics[trim=140 100 0 75, clip, height=3.75cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/bcdi_data/B7/B7_facets.png}
     \includegraphics[height=3.75cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sample/sxrd_sample.png}
     \caption{
-    Platinum gazes used in industry (left).
+    Platinum gauzes used in industry (left).
     Reconstructed phase of a Pt particle measured at SixS, its diameter is of about \qty{300}{\nm} (middle).
     Pt 111 single crystal used in SXRD and XPS experiments, its diameter is of about \qty{8}{\mm} (right).
     }
