--- a/Sections/4_Results_SingleCrystals/100.tex
+++ b/Sections/4_Results_SingleCrystals/100.tex
@@ -162,12 +162,12 @@ Second order peaks can also be seen at the edge of the reciprocal space map, eac
 Different hexagonal surface reconstructions on the Pt (100) surface have been reported also in the [110] direction at UHV conditions, summarised in \cite{Hammer2016}, based on an important body of work \parencite{Heilmann1979, VANHOVE1981, Heinz1982, Mase1992, Kuhnke1992, Borg1994, VanBeurden2004, Havu2010}, evolving to rotated hexagonal reconstructions with angles between \ang{0.77} and \ang{0.94} depending on the sample temperature and on the previous temperature treatment.
 The unit cell describing those reconstructions with respect to the Pt (100) surface varies, if first contained to (5XN) where N = 20–30, the latest study reports a commensurate c(26X118) superstructure.
 Exposition of the rotated hexagonal structure to oxygen at \qty{450}{\degreeCelsius} studied by low energy electron diffraction (LEED) has been found to remove the hexagonal structure and precipitate the growth of surface oxides \textit{via} different phases \parencite{BradleyShumbera2007, BradleyShumbera2007a}, a similar conclusion was reached by \cite{Deskins2005} by DFT studies.
-Exposition to \ce{NO} has been reported to stabilise the clean Pt (100) phase \parencite{Heinz1982}, while exposition to \ce{CO} removes the hexagonal reconstruction, an oscillatory behaviour between a clean (1X1) surface and the rotated hexagonal reconstruction was reported by Cox \textit{et al.} \parencite*{Cox1983}.
+Exposition to \ce{NO} has been reported to stabilise the clean Pt (100) phase \parencite{Heinz1982}, while exposition to \ce{CO} removes the hexagonal reconstruction, an oscillatory behaviour between a clean (1X1) surface and the rotated hexagonal reconstruction was reported by Cox et al. \parencite*{Cox1983}.
 
 A (2X2) reconstruction of the Pt (100) surface has been reported at an oxygen pressure of \qty{1e-3}{mbar} by the use of environmental TEM \parencite{Li2016}.
 
 Subsurface oxygen has also been predicted to exist on Pt (100) \parencite{Gu2007}, reported at a pressure of \qty{0.133}{\milli\bar} \parencite{McMillan2005}, and participating in the catalytic oxidation of \ce{CO}.
-Subsurface oxygen was identified as a precursor to a stable surface oxide during the catalytic oxidation of \ce{CO} by Dicke \textit{et al.} \parencite*{Dicke2000}, at an oxygen pressure of \qty{0.09}{\milli\bar}, its appearance linked to the lifting of surface reconstructions on the clean Pt (100) surface from the adsorption of \ce{CO}, which then allowed oxygen atoms to penetrate under the topmost layer of platinum \parencite{Rotermund1993, LAUTERBACH1994}.
+Subsurface oxygen was identified as a precursor to a stable surface oxide during the catalytic oxidation of \ce{CO} by Dicke et al. \parencite*{Dicke2000}, at an oxygen pressure of \qty{0.09}{\milli\bar}, its appearance linked to the lifting of surface reconstructions on the clean Pt (100) surface from the adsorption of \ce{CO}, which then allowed oxygen atoms to penetrate under the topmost layer of platinum \parencite{Rotermund1993, LAUTERBACH1994}.
 
 Overall, few works at ambient pressure have been found to exist, even less during the catalytic oxidation of ammonia.
 Out-of-plane measurements were performed perpendicular to two peaks, also presented in fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}, no bulk structure could be detected.
@@ -206,9 +206,9 @@ Crystal truncation rods have been measured perpendicularly to the ($\bar{1}\bar{
 The background-subtracted intensity of the CTR was integrated using the \textit{fitaid} module of \textit{binoculars} as a function of $L$ with the same integration range.
 The CTR intensity is presented in fig. \ref{fig:CTRPt100}, additional peaks could be detected under exposition to \qty{80}{\milli\bar} of \ce{O_2}, which shows that bulk \ce{Pt_3O_4} is epitaxied on the Pt (100) surface.
 
-The presence of those peaks prevent us from resolving the minimal position of the CTR intensity, the absence of oscillations in the evolution of the CTR intensity as a function of $L$ also shows that we are not in the presence of a homogeneous layer of \ce{Pt_3O_4}, but rather of many islands of different height covering the substrate.
+The presence of those peaks prevent us from resolving the minimal position of the CTR intensity, the absence of oscillations in the evolution of the CTR intensity as a function of $L$ also shows that there is no homogeneous layer of \ce{Pt_3O_4}, but rather many islands of different height covering the substrate.
 
-We can divide our catalyst surface in three different components as a function of $\vec{z}$.
+The catalyst surface can be divided in three different components as a function of $\vec{z}$.
 First, there is bulk Pt (100) in which the structure is homogeneous.
 Secondly, there is the interface between bulk platinum and the different islands of \ce{Pt_3O_4}, in which the platinum atoms are expected to be displaced from their equilibrium positions due to the interaction with the bulk oxide, and where there could also be the presence of some subsurface oxygen atoms.
 Thirdly, there are the \ce{Pt_3O_4} islands, on top of the previous layers, with different heights.
