--- a/Sections/4_Results_SingleCrystals/111.tex
+++ b/Sections/4_Results_SingleCrystals/111.tex
@@ -50,7 +50,7 @@ The angle between the peaks circled in grey and white and the peaks circled in r
 No apparent second order peak can be linked to those rotated hexagonal structures.
 Summing the two vectors going from the centre of the reciprocal space to the white and purple circled peaks yields the position of the black circled peak, the angle between both vectors is then equal to \ang{42.65}.
 
-The measurement of the entire reciprocal space map took about \qty{3}{\hour}\qty{35}{\minute}, the entire map being a concatenation of multiple $\omega$ scans during which the plane of the sample is rotated, the first scan starting near the center of the reciprocal space.
+The measurement of the entire reciprocal space map took about \qty{3}{\hour}\qty{35}{\minute}, the entire map being a concatenation of multiple $\omega$ scans during which the plane of the sample is rotated, the first scan starting near the centre of the reciprocal space.
 The contribution of each scan in the reciprocal space map is visible from their different background.
 Therefore, there is approximately \qty{1}{\hour} between the measurement of the peaks circled in red, grey, purple and white, and the peak circled in black.
 
@@ -58,7 +58,7 @@ A second map was measured in a smaller region of the reciprocal space \qty{9}{\h
 The measurement of this map took about \qty{1}{\hour}\qty{15}{\minute}.
 Three additional peaks (circled in black) appeared on a (8X8) coincidence with comparison to the hexagonal lattice of Pt (111), describing also a hexagonal lattice (drawn in black dotted lines) of lattice parameter equal to $|\vec{a_{hex}}| = \qty{3.118}{\angstrom}$.
 
-The grey circled peak seems to have disappeared from the reciprocal map, but an additional peak circled in red is revealed at \ang{120} from the other peak circled in red, and \qty{60} from the peak circled in grey, at the same distance from the center.
+The grey circled peak seems to have disappeared from the reciprocal map, but an additional peak circled in red is revealed at \ang{120} from the other peak circled in red, and \qty{60} from the peak circled in grey, at the same distance from the centre.
 % [-101] and [1-10] eg ?
 From these first measurement, a first hypothesis to explain the position of the observed peaks is that (i) there first appears two rotated hexagonal structures with a larger in-plane lattice parameter in comparison to Pt (111), (ii) there secondly appears a (8X8) hexagonal structure while measuring the large reciprocal space map, also with a larger in-plane lattice parameter, but in the same direction as the in-plane unit cell vectors of Pt (111), explaining the position of the black circled peak in the first map.
 It is possible that the disappearance of the grey circle peak is linked to some alignment problems, visible from the large low intensity region in fig. \ref{fig:MapsPt111A}.
@@ -103,7 +103,7 @@ Four different bulk platinum oxides have been reported to exist in literature, $
 \label{tab:PtOxides}
 \end{table}
 
-The lack of peaks at $L=0$ in fig. \ref{fig:LScans80} for the (8X8) hexagonal structure shows that we are not in the presence of a bulk structure.
+The lack of peaks at $L=0$ in fig. \ref{fig:LScans80} for the (8X8) hexagonal structure shows that there is no bulk structure on the catalyst surface.
 However, Seriani et al. \parencite*{Seriani2006} have also found that the most stable surface oxide on the Pt (111) surface is expected to be hexagonal $\alpha$-\ce{PtO_2}.
 A high uncertainty regarding the lattice parameter in the $\vec{c}$ direction is reported in experimental and theoretically studies due to a poor crystallisation of the bulk oxide \parencite{MULLER1968}, and to underestimation of weak interlayer Van der Waals forces in theoretical studies \parencite{LI2005}.
 
@@ -142,7 +142,7 @@ The two $L$-scans performed in the current study were fitted using two Gaussian 
     \label{fig:LScans80Fit}
 \end{figure}
 
-We report a peak at [-0.89, 0, 0.65] but using the Pt (111) surface unit cell, with an out-of-plane lattice parameter equal to \qty{6.797}{\angstrom}, incompatible with the results presented in Ellinger et al \parencite*{Ellinger2008}.
+Aa peak at [-0.89, 0, 0.65] is reported, but using the Pt (111) surface unit cell, with an out-of-plane lattice parameter equal to \qty{6.797}{\angstrom}, incompatible with the results presented in Ellinger et al \parencite*{Ellinger2008}.
 It seems that a different out-of-plane structure is present for the $\alpha$-\ce{PtO_2} surface oxide in this study.
 Additional simulations are needed to fully understand the structures present in this study, with different surface models including the \textit{spoked-wheel} superstructure identified \textit{via} scanning tunnelling microscopy (STM) by \cite{VanSpronsen2017, Boden2022}, and the different surface oxides identified by Miller et al \parencite*{Miller2011, Miller2014}, Fantauzzi et al \parencite*{Fantauzzi2017}, as well as Farkas et al. \parencite*{FARKAS2017}, for some at similar temperature and oxygen partial pressures, respectively \qty{6.66}{\milli\bar} of \ce{O_2} at \qty{450}{\degreeCelsius} and \qty{1}{\milli\bar} of oxygen between \qty{160}{\degreeCelsius} and \qty{410}{\degreeCelsius}.
 \textcolor{Important}{which one...}
@@ -232,7 +232,7 @@ The nature of the peak situated at (-0.89, -0.89) is not yet clear since it appe
 As mentioned before, it is possible to draw a surface unit cell including this peak together with the white and purple circled peak, but with an in-plane angle $\gamma^*$ equal in this case to \ang{42.13}.
 
 The area sampled during the measurement was extended in the two last maps which allows us to observe more signals around the ($1\bar{1}0$) region.
-For each map, two peaks circled by the same colour draw two vectors of the same magnitude going through the center of the reciprocal space and separated by \ang{120}, in the last two maps there are three doublet of peaks separated by \ang{120}, in red, grey and purple ($q$-map available in appendix \ref{fig:2064QSpace}).
+For each map, two peaks circled by the same colour draw two vectors of the same magnitude going through the centre of the reciprocal space and separated by \ang{120}, in the last two maps there are three doublet of peaks separated by \ang{120}, in red, grey and purple ($q$-map available in appendix \ref{fig:2064QSpace}).
 Moreover, the purple and red circled peaks are separated by \ang{60}, likewise for the grey and white circled peaks.
 During this set of measurement, the grey circled peak did not disappear on the contrary to the measurements carried out under \qty{80}{\milli\bar} of oxygen, which furthermore supports the existence of at least two rotated hexagonal structures.
 
@@ -268,7 +268,7 @@ The intensity of both peaks (related to the other rotated hexagonal structures) 
 Both peak intensity then starts to decreases after \qty{\approx 25}{\hour} of exposition, a few hours after the increase of the $\alpha$-\ce{PtO_2} peak intensity.
 
 Several out-of-plane measurement have been carried out perpendicular to the white and red circled peaks, presented in appendix \ref{fig:LScans05}.
-The peak intensity is constant as a function of $L$, similarly to the out-of-plane measurements presented in \ref{fig:LScans80}, which shows that we are not in the presence of 3D rotated hexagonal structures.
+The peak intensity is constant as a function of $L$, similarly to the out-of-plane measurements presented in \ref{fig:LScans80}, which shows that the rotated hexagonal structures are not three-dimensionnals.
 No $L$-scan was measured perpendicularly to the ($0\bar{1}$0)$_{\alpha-PtO_2}$ peak.
 
 Lowering the oxygen partial pressure in the reactor cell from \qtyrange{80}{5}{\milli\bar} has demonstrated that similar in-plane structures appear, but with a slower growth rate, which were both absent in the simultaneous presence of oxygen and ammonia in the reactor.
@@ -417,10 +417,6 @@ Considering the gases present in the reactor cell, the expected species are NH2,
 
 For the peaks that showed a good signal to noise ratio, the fitting of the peak shape was realised thanks to the \textit{lmfit} \parencite{Newville2016} package by the means of the Doniach-equation which is the best approximation of the asymmetric peak shape resulting from the convolution of the analyser function and the photoelectron process in metals \parencite{Doniach_1970}.
 
-On pure Pt, an important body of work has been already carried out, revealing several bulk oxide structures present in the temperature and
-pressure ranges we intend to study, as well as the presence of surface oxides depending on the structure of the crystal surface.
-
-
-
+On pure Pt, an important body of work has been already carried out, revealing several bulk oxide structures present in the probed temperature and pressure ranges, as well as the presence of surface oxides depending on the structure of the crystal surface.
 
 \cite{Miller2011} have measured both O1s and Pt4f edges at under \qty{6.66}{\milli\bar} of \ce{O_2} at \qty{450}{\degreeCelsius}, and under \qty{0.66}{\milli\bar} of \ce{O_2} at \qty{350}{\degreeCelsius}.
