--- a/Sections/4_Results_SingleCrystals/Introduction.tex
+++ b/Sections/4_Results_SingleCrystals/Introduction.tex
@@ -9,7 +9,7 @@ This change in relaxation has an impact on the band structure and therefore on t
 It is therefore our intent to study if this modification in the relaxation is present only in the \ce{PtRh} alloy or if it has a more general value also on the constituent elements of the alloy such as Pt.
 Different relaxation state, transient structures, and surface moieties are expected to exist as a function of the ammonia to oxygen ratio.
 
-Moreover, we have recently probed the average shape of multi-faceted nanoparticles at the SixS beamline under the oxidation of ammonia using surface x-ray diffraction, which showed a global reshaping of the nanoparticles at \qty{600}{\degreeCelsius} under reacting conditions, favouring \{111\} and \{100\} facets over \{110\} and \{113\} facets, which could be the signature of an important role of surface oxides, stable on the \{111\} and \{100\} facets, to the catalytic activity, as predicted by Seriani et al. \parencite*{Seriani2008}.
+Moreover, the average shape of multi-faceted nanoparticles was recently probed at the SixS beamline under the oxidation of ammonia using surface x-ray diffraction, which showed a global reshaping of the nanoparticles at \qty{600}{\degreeCelsius} under reacting conditions, favouring \{111\} and \{100\} facets over \{110\} and \{113\} facets, which could be the signature of an important role of surface oxides, stable on the \{111\} and \{100\} facets, to the catalytic activity, as predicted by Seriani et al. \parencite*{Seriani2008}.
 The evolution of two single nanoparticles exhibiting different type of facets on their surfaces was probed with Bragg coherent diffraction imaging, highlighting the importance of the particle shape and thus facet coverage on its behaviour during the ammonia oxidation cycle.
 
 The 3D displacement and strain evolution of two different facets present of the nanoparticles (\{100\} and \{111\}) will be compared to our results obtained on Pt (100) and (111) crystal surfaces by SXRD, to fully understand the impact of the Pt surface orientation on the catalyst selectivity.
