--- a/main.tex
+++ b/main.tex
@@ -95,7 +95,7 @@
 \usepackage[utf8]{inputenc} % Use accents in source code, load before biblatex
 \usepackage[T1]{fontenc} % Show accents in output
 
-\usepackage[style=authoryear,sorting=nyt,mincitenames=1, maxcitenames=2]{biblatex}
+\usepackage[style=authoryear,sorting=nyt,mincitenames=1, maxcitenames=2, eprint=false,giveninits=true, url=false]{biblatex}
 %    nty Sort by name, title, year.
 %    nyt Sort by name, year, title.
 %    nyvt Sort by name, year, volume, title.
@@ -105,6 +105,8 @@
 %    ydnt Sort by year (descending), name, title.
 %    none Do not sort at all. All entries are processed in citation order.
 \addbibresource{/home/david/Documents/PhD/PhdThesis/references.bib}
+
+\usepackage[nottoc,numbib]{tocbibind}
 
 %%%%%%%%%%%%%%%%%%%%%%% Other packages %%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{lipsum} % Latin blabla
@@ -219,8 +221,8 @@
 \frontmatter
 {\hypersetup{linkcolor=black}
     \tableofcontents
-    \listoffigures
-    \listoftables
+    % \listoffigures
+    % \listoftables
 }
 
 \mainmatter
@@ -259,7 +261,10 @@
     
 % % Bibliography
     \phantomsection
-    \printbibliography
+    \printbibliography[
+        heading=bibintoc,
+        title={Bibliography}
+    ]
 
 % Appendices
     \appendix
@@ -269,6 +274,8 @@
 
     \chapter{Nanoparticles study}
     \input{Sections/6_Appendix/Nanoparticles}
+    \includepdf[pages=-]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/bcdi_data/3D_B7.pdf}\label{app:AppendixB7}
+    \includepdf[pages=-]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/bcdi_data/3D_D6_edited.pdf}\label{app:AppendixD6}
 
     \chapter{Single crystals study}
     \input{Sections/6_Appendix/Pt100}
